# rest

./: .gitignore  Cargo.toml  Dockerfile  README.md  log.txt  run_wrk_close.sh  run_wrk_hyper.sh  test_bind.c  test_bug.rest  test_consts.c  test_variadic.rest
.cargo/: config.toml
.github/workflows/: ci.yml
compiler/: Cargo.toml
compiler/src/: driver.rs  main.rs
compiler/src/codegen/: compile.rs  expr.rs  mod.rs  stmt.rs  types.rs
compiler/src/ir/: hir.rs  lower.rs  mod.rs
compiler/src/lexer/: lexer.rs  token.rs
compiler/src/parser/: ast.rs  parser.rs
compiler/src/sema/: ty.rs  typeck.rs
compiler/src/util/: scope_stack.rs
docs/: arc_implementation.md  architecture.md  compiler_internals.md  language_reference.md  memory_management.md  pizdec.md  web_framework.md
examples/: game_of_life.rf  simple.rest  web_magic.rest
rest_runtime/: Cargo.toml
rest_runtime/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: core.rs  lib.rs  server.rs
src/: driver.rs  lib.rs  main.rs  ops.rs
src/codegen/: compile.rs  expr.rs  memory.rs  mod.rs  stmt.rs
src/ir/: hir.rs  lower.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/sema/: borrowck.rs  mod.rs  ty.rs  typeck.rs
src/util/: mod.rs  scope_stack.rs
std/: context.rest  green_threads.rest  http.rest  http_server.rest  net.rest  scheduler.rest
tests/: async_server_test.rest  const_test.rest  green_threads_test.rest  http_parser_test.rest  import_helper.rest  import_test.rest  integration.rs
tests/examples/: hello.rf
