[package]
name = "restc"
version = "0.1.0"
edition = "2024"
description = "Rest backend language compiler based on ref"
license = "MIT"

[dependencies]
inkwell = { version = "0.9", features = ["llvm18-1"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2.1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
